Tue Mar 15 14:38:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Simple/grid/README:
          Fixed typo

Tue Mar 15 10:45:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/NestedUpcall/Triangle_Test/initiator.cpp:
          Define the Initiator_Server within the test scope so that we know for
          sure it is destructed before the other cleanup actions

Tue Mar 15 10:32:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/ServantRetentionStrategyNonRetain.cpp:
          Use the correct typedef in system_id_to_object_id

Tue Mar 15 15:24:37 (IST) 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/Hang_Shutdown/test_i.h :

	  Fixed compilation errors in VC6.

Tue Mar 15 08:48:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DSI_Gateway/test_dsi.cpp:
          When receiving a shutdown, first forward it to the real server
          and after that shutdown our orb.

        * tests/DSI_Gateway/test_i.cpp:
          Initialise pointer with 0

Mon Mar 14 12:22:37 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* examples/Callback_Quoter/Callback_Quoter.mpc:
	* examples/Event_Comm/Event_Comm.mpc:
	* examples/Logging/Logging.mpc:

	  Changed to inherit from naming instead of naming_serv.

	* examples/Callback_Quoter/Notifier_Input_Handler.cpp:
	* examples/Callback_Quoter/Notifier_Input_Handler.h:
	* examples/Event_Comm/Notifier_Server.cpp:
	* examples/Event_Comm/Notifier_Server.h:
	* examples/Logging/Logging_Service_i.cpp:
	* examples/Logging/Logging_Service_i.h:

	  Changed to use TAO_Naming_Client instead of TAO_Naming_Server.

Mon Mar 14 12:05:54 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* examples/Simple/bank/bank.mpc:
	* examples/Simple/echo/echo.mpc:
	* examples/Simple/grid/grid.mpc:
	* examples/Simple/time/time.mpc:

	  Added inheritance from iortable (its inheritance was previously
	  implicit via naming_serv).
